# conways-opencl

./: CLI.cpp  CMakeLists.txt  GameOfLife.cpp  LICENSE  README.md  gol_opencl.cpp  performance_measure.cpp  plotting_script.py
include/: CLI.h  GameOfLife.h
src/: CLI.cpp  GameOfLife.cpp  gol_opencl.cpp  main.cpp  performance_measure.cpp  test_save.cpp
